Make SeasonalClean reproducible and runnable